--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,52 +1,484 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<h2>DRAFT</h2>
+	<table border="1" style="border-collapse: collapse" width="100%"
+		cellpadding="4" bordercolor="#FFFFFF">
+		<tr>
+			<td bgcolor="#595791" width="7%" align="center"><b> <font
+					color="#FFFFFF" size="1">Release</font></b></td>
+			<td bgcolor="#595791" width="5%" align="center"><b> <font
+					color="#FFFFFF" size="1">Resolved </font></b></td>
+			<td bgcolor="#595791" width="*" align="center"><b> <font
+					color="#FFFFFF" size="1">Community Contributions</font></b></td>
+		</tr>
+		<tr>
+			<td bgcolor="#E0D0E6"><font size="1">3.10<br> <i>November
+						6, 2013</i></font></td>
+			<td bgcolor="#E0D0E6" align="center"><a
+				href="/mylyn/doc/plan-3.9.html"> <font size="1">65</font><br>
+					<font size="1">bugs</font></a></td>
+			<td bgcolor="#E0D0E6"><font size="1">Community
+					contributions were provided by Jeremie Bresson, Krzysztof Daniel,
+					Steve Elsemore, Lily Guo, Marc-Andre Laperle, Benjamin Muskalla,
+					and Casey Thompson.<br>Includes: <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.10">Mylyn
+						3.10</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.2">Mylyn
+						Builds 1.2</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.10">Mylyn
+						Commons 3.10</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.10">Mylyn
+						Context 3.10</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=1.9.0">Mylyn
+						Docs 1.9</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.1">Mylyn
+						Reviews 2.1</a>. <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.10">Mylyn
+						Tasks 3.10</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.2">Mylyn
+						Versions 1.2</a>.
+			</font></td>
+		</tr>
+	</table>
 
-<p><b>Also see the <a href="http://eclipse.org/mylyn/new/">New &amp; Noteworthy</a> for the latest release.</b></p> 
+	<p>
+		<b>Also see the New &amp; Noteworthy for: <a
+			href="http://eclipse.org/mylyn/new/new-3.9.html">Mylyn 3.9</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.8.html">Mylyn 3.8</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.6.html">Mylyn 3.6</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.4.html">Mylyn 3.4</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.2.html">Mylyn 3.2</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, <a
+			href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, <a
+			href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a
+			href="http://eclipse.org/mylyn/new/new-0.5.html">Mylyn 0.5</a>, <a
+			href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a
+			href="http://eclipse.org/mylyn/new/new-0.3.html">Mylyn 0.3</a></b>
+	</p>
 
-<p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 before installing Mylyn 3.10.</p>
+	<hr size="1" />
 
-<hr size="1"/>
+	<p>
+		<span style="font-weight: 700; background-color: #E0D0E6">New
+			in Mylyn 3.10</span>
+	</p>
 
-<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.8 Snapshot Builds</span></p>
-<!-- 
-<ul>
-	<li><a href="#task-editor">Task Editor</a></li>
-	<li><a href="#task-list">Task List</a></li>
-	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
-	<li><a href="#wikitext">WikiText</a></li>
-	<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector</a></li>
-	<li><a href="#trac">Trac Connector</a></li>
-	<li><a href="#gerrit">Gerrit Connector</a></li>
-	<li><a href="#framework">Framework and API</a></li>
-</ul>
- -->
- 
-<p><b>NOTE:</b> Mylyn 3.10 requires <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907" target="_new"><b>Java 1.6 or later</b></a> and
-<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383916" target="_new"><b>Eclipse 3.8 or later</b></a>. See the <a href="/mylyn/downloads/">download page</a> for repository locations.</p>
-<hr size="1"/>
+	<ul>
+		<li><a href="#task-list">Task List</a></li>
+		<li><a href="#task-editor">Task Editor</a></li>
+		<li><a href="#wikitext">WikiText</a></li>
+		<li><a href="#bugzilla">Bugzilla Connector</a></li>
+		<li><a href="#gerrit">Gerrit Connector</a></li>
+		<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
+		<li><a href="#framework">Framework and API</a></li>
+	</ul>
 
-No builds have been published, yet. Stay tuned.
-<!-- 
-<table cellpadding="10" cellspacing="0" width="100%">
-	<tr>
+	<p>
+		<b>NOTE:</b> Mylyn 3.10 requires <a
+			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907"
+			target="_new"><b>Java 1.6 or later</b></a> and supports <a
+			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=412708"
+			target="_new"><b>Eclipse 3.8, 4.3 or 4.4</b></a>. Eclipse 3.6 is now
+		the base compilation target, so <a
+			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=417262">Mylyn
+			no longer runs on Eclipse 3.5</a>. See the <a href="/mylyn/downloads/">download
+			page</a> for repository locations.
+	</p>
+	<hr size="1" />
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="task-list">Task List</a>
+	</h2>
+
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Undo/Redo Mark Tasks Read</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">After marking one or more tasks read or unread
+					in the Task List or Task Editor, the operation can be undone. Mark
+					Read/Unread operations are added to the Task List undo/redo
+					history. They can be undone and redone using the undo/redo commands
+					in the Edit menu when the Task List view is active.</p>
+				<p>
+					<img border="0" src="images/3.10/task-list-undo-mark-read.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
 		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-		<p align="right"><b>...</b></p>
+			<p align="right">
+				<b>Indicate Private Notes</b>
+			</p>
 		</td>
 		<td valign="top" width="85%">
-		<p align="left">...</p>
-		<p><img border="0" src="images/3.8/...png"></p>
+			<p align="left">The Task List indicates which tasks have private
+				notes with a yellow pencil icon.</p>
+			<p>
+				<img border="0" src="images/3.10/task-list-private-notes.png" />
+			</p>
 		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		<hr size="1"/>
-		</td>
-	</tr>
-</table>
- -->
- 
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Improved Tooltips</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">When hovering over a query, category, or date
+					container in the Task List, the tooltip displays the number of
+					tasks with incoming and outgoing changes.</p>
+				<p>
+					<img border="0" src="images/3.10/task-list-tooltip.png" />
+				</p>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="task-editor">Task Editor</a>
+	</h2>
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Display Last Commented Date</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The date of the last comment is displayed at the
+					top of the Task Editor next to the created and modified dates.</p>
+				<p>
+					<img border="0" src="images/3.10/task-editor-last-commented.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Open Attachments with System Editor</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">On Windows, attachments are opened with the
+					system editor by default instead of the browser.</p>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="wikitext">WikiText</a>
+	</h2>
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Generate Textile/Confluence/etc.</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">File context menus have a Generate action for
+					each markup language that supports generating content via a
+					markup-specific DocumentBuilder.</p>
+				<p>
+					<img border="0" src="images/3.10/wikitext-generate.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Definition Lists</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">WikiText supports Textile and Mediawiki
+					definition lists.</p>
+				<p>
+					<img border="0" src="images/3.10/wikitext-definition-list.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Markdown</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Markdown now has content assist and a cheat
+					sheet.</p>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="bugzilla">Bugzilla Connector</a>
+	</h2>
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Edit Query URL</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The Bugzilla URL-based query page now uses a
+					mult-line text field for the query URL to make edting long URLs
+					easier.</p>
+				<p>
+					<img border="0" src="images/3.10/bugzilla-query-url.png" />
+				</p>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="gerrit">Gerrit Connector</a>
+	</h2>
+
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>New Icon</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The icon has been updated to Diffy The Kung Fu
+					Review Cuckoo.</p>
+				<p>
+					<img border="0" src="images/3.10/gerrit-icon.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Gerrit 2.7</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Gerrit 2.7 is now supported.</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Non-modal Inline Comments Dialog</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The inline comment dialog is non-modal, allowing
+					users to copy and paste text from the compare editor. The dialog is
+					also resizable to make it easy to write longer comments.</p>
+			</td>
+		</tr>
+	</table>
+
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="hudson">Hudson/Jenkins Connector</a>
+	</h2>
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Download Builds in the Background</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">When clicking a link to a build, the build
+					editor opens immediately while the build is downloaded in the
+					background. This allows users wanting to open the build in the web
+					UI to do so without waiting for it to be downloaded first.</p>
+				<p>
+					<img border="0" src="images/3.10/hudson-build-editor.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Hudson 3.1</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Hudson 3.1 is now supported.</p>
+			</td>
+		</tr>
+	</table>
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="framework">Framework and API</a>
+	</h2>
+
+	<p>
+		See <a
+			href="http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.9"
+			target="_new">porting guide</a> for additional notes on API changes.
+	</p>
+
+	<table cellpadding="10" cellspacing="0" width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Tasks: Repository Connector Extensions in Core</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					Repository connector extensions are now declared in tasks.core so
+					that implementors are not required to depend on tasks.ui: <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=386117">bug
+						386117</a>
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="left">
+					<b>Tasks: Support Custom Attributes in Initialization Data</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					The
+					<tt>TaskInitializationData</tt>
+					class is provided to allow connectors to include custom attributes
+					in initialization data: <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=386764">bug
+						386764</a>.
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="left">
+					<b>Tasks: Dynamic Contribution of Connectors</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					Declaration of connectors in plugin.xml is not required. Connectors
+					can be declared through alternative means and contributed at
+					runtime: <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=408511">bug
+						408511</a>.
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="left">
+					<b>Tasks: Improved Task Activty API</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					Clients can determine the first and last dates that a task was
+					active: <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=409758">bug
+						409758</a>.
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="left">
+					<b>Context: Parameterized Commit Template Variables</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					Integrators can define commit template variables that take
+					arguments: <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=415013">bug
+						415013</a>.
+				</p>
+			</td>
+		</tr>
+	</table>
+
 </body>
 </html>
