--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -70,7 +70,7 @@
 		<li><a href="#task-list">Task List</a></li>
 		<li><a href="#task-editor">Task Editor</a></li>
 		<li><a href="#context">Context</a></li>
-		<li><a href="#scm-connectors">SCM Connectors</a></li>
+		<li><a href="#team">Team</a></li>
 		<li><a href="#gerrit">Gerrit Connector</a></li>
 		<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
 		<li><a href="#framework">Framework and API</a></li>
@@ -154,25 +154,6 @@
 				</p>
 			</td>
 		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Per-Attribute Markup Languages</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-					Task attributes that specify a media type using the metadata key
-					<tt>TaskAttribute.META_ATTRIBUTE_MEDIA_TYPE</tt>
-					are displayed using the corresponding markup viewer.
-				</p>
-			</td>
-		</tr>
 	</table>
 
 
@@ -191,7 +172,8 @@
 			<td valign="top" width="85%">
 				<p align="left">On task deactivation, Mylyn removes all breakpoints and stores them in
 					the task context, preventing the accumulation of a huge set of breakpoints. This valuable task-specific information can also
-					be shared with other users working on the same task. This is an experimental feature and must be enabled by users.</p>
+					be shared with other users working on the same task. This is an experimental feature and must be enabled by users; see 
+					the <a href="https://wiki.eclipse.org/index.php?title=Mylyn/User_Guide#Breakpoints">known limitations</a>.</p>
 				<p>
 					<img border="0" src="images/3.11/.png" />
 				</p>
@@ -202,7 +184,7 @@
 
 	<p>&nbsp;</p>
 	<h2>
-		<a name="scm-connectors">SCM Connectors</a>
+		<a name="team">Team</a>
 	</h2>
 
 	<table cellpadding="10" cellspacing="0" width="100%">
@@ -213,7 +195,9 @@
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The default commit comment template has been simplified by removing the task status. It also uses a Git style header for the task URL.</p>
+				<p align="left">The default commit comment template has been simplified by removing the task status. It also uses a Git style 
+				header for the task URL. The global template can be changed in the workspace preferences, and project-specific templates can 
+				be configured in the project properties.</p>
 				<p>
 					<img border="0" src="images/3.11/.png" />
 				</p>
@@ -294,8 +278,8 @@
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The Gerrit connector includes a dashboard that allows you to search for code reviews and view the approval state of all reviews matching 
-				the search criteria.</p>
+				<p align="left">The new Gerrit Dashboard allows one to search for code reviews and view the approval state of all reviews matching 
+				the search criteria. The dashboard is a separate feature that can be optionally installed from the Mylyn update site.</p>
 				<p>
 					<img border="0" src="images/3.11/.png" />
 				</p>
@@ -419,6 +403,25 @@
 				<p align="left">Connectors can indicate required attributes by setting <tt>TaskAttribute.META_REQUIRED</tt> flag:
 					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=378032">bug
 						378032</a>.
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+				<p align="right">
+					<b>Tasks: Per-Attribute Markup Languages</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					Task attributes that specify a media type using the metadata key
+					<tt>TaskAttribute.META_ATTRIBUTE_MEDIA_TYPE</tt>
+					are displayed using the corresponding markup viewer.
 				</p>
 			</td>
 		</tr>
